[tool.poetry]
name = "pythonmltemplate"
version = "0.1.0"
description = "Python Machine Learning Template for Poetry"
authors = ["Adrian <adrian.schneider.pr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
matplot = "^0.1.9"
scikit-learn = "^1.2.0"
scipy = "^1.10.0"
numpy = "^1.24.1"
torch = "^1.13.1"
tqdm = "^4.64.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
